# Auto-Research

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  daily-arxiv-project-flow.drawio  environment.yml  main.py  pyproject.toml  requirements.txt  scheduler.py  weekly_idea.py  zotero_upload.py
config/: config.yaml
config/prompts/: daily_paper_digest_prompt.txt  daily_trend_analysis_prompt.txt  weekly_zotero_idea_prompt.txt  zotero_daily_upload_prompt.txt
deploy/: README.md  crontab.example  daily-arxiv-scheduler.service  daily-arxiv-web.service  daily-arxiv.service  start.sh  start_with_exist_conda_env.sh
docs/: arxiv_fetcher_guide.md  config_guide.md  llm_guide.md  max_tokens_fix.md  scheduler_guide.md  trend_analyzer_guide.md  web_interface_guide.md
src/: utils.py
src/analyzer/: __init__.py  trend_analyzer.py
src/automation/: __init__.py  cli_runner.py  copilot_runner.py  weekly_idea_runner.py  zotero_prompt_runner.py
src/crawler/: arxiv_fetcher.py
src/notifier/: __init__.py  email_notifier.py
src/summarizer/: __init__.py  base_llm_client.py  claude_client.py  deepseek_client.py  gemini_client.py  llm_factory.py  openai_client.py  paper_summarizer.py  vllm_client.py
src/web/: __init__.py  app.py
src/web/templates/: index.html  index.html.bak
static/css/: style.css
static/js/: main.js  main.js.bak
test/: debug_vllm.py  test_analyzer.py  test_fetcher.py  test_fetcher_dedup.py  test_max_tokens.py  test_scheduler.py  test_summarizer.py  test_web.py  test_weekly_idea.py  test_zotero_upload.py
