[project]
name = "auto-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler==3.10.4",
    "arxiv==2.1.0",
    "colorama==0.4.6",
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "jieba==0.42.1",
    "markdown==3.5.2",
    "matplotlib==3.8.3",
    "nltk==3.8.1",
    "openai>=2.33.0",
    "pandas==2.2.1",
    "pillow==10.2.0",
    "python-dotenv>=1.2.2",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "requests>=2.31.0",
    "scikit-learn==1.4.1.post1",
    "tqdm==4.66.2",
    "wordcloud==1.9.3",
    "zotero-mcp-server",
]

[tool.uv.sources]
zotero-mcp-server = { git = "https://github.com/Galaxy-Dawn/zotero-mcp.git" }
